[tool.poetry]
name = "failed-supernova-neutrino-mass"
version = "0.1.0"
description = "Can we measure the mass of neutrinos with a multi-messenger detection of a failed supernova?"
authors = ["jacopok <jacopok@gmail.com>"]
license = "GNU GPL3"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
astropy = "^5.0.4"
typing-extensions = "^4.2.0"
tqdm = "^4.64.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.950"
scalene = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
